test-cases/use_before_def.exp
Error detected during type checking of modules use_before_def
[91mtest-cases/use_before_def.wybe:2:18: Unknown variable/procedure/function 'result' in use_before_def
[0m