test-cases/use_before_def.wybe
pub def use_before_def(?result:int)        {
       ?result = result + 1
       
}
